# vrchat-rpc

./: biome.json  package.json  pnpm-lock.yaml  tailwind.config.js
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/clients/: discord.rs  file_system.rs  http_client.rs  mod.rs  vrchat.rs  websocket.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/commands/auth/: command.rs  schema.rs
src-tauri/src/commands/check_user/: command.rs  schema.rs
src-tauri/src/commands/configuration/: command.rs  schema.rs
src-tauri/src/commands/credentials_auth/: command.rs  schema.rs
src-tauri/src/commands/email_otp/: command.rs  schema.rs
src-tauri/src/commands/settings/: command.rs  mod.rs  schema.rs
src-tauri/src/commands/websocket_handle/: command.rs
src-tauri/src/schema/: mod.rs  user.rs  user_location.rs  websocket_event.rs  world.rs
src-tauri/src/utils/: basic_auth.rs  cookies.rs  mod.rs  replacer.rs  ws_message_handler.rs
src/component/BrowseTab/: BrowseTab.tsx  index.ts
src/component/ConfigurationTab/: ConfigurationTab.tsx  index.ts
src/component/ConfigurationTab/components/: EveryGame.tsx  index.ts
src/component/CredentialsLogin/: CredentialsLogin.tsx  index.tsx
src/component/EmailOtpVerify/: EmailOtpVerify.tsx  index.tsx
src/component/Header/: Header.tsx
src/component/OverviewMenu/: OverviewMenu.tsx  index.ts
src/component/OverviewTabs/: OverviewTabs.tsx  index.ts
src/component/OverviewWarning/: OverviewWarning.tsx
src/component/ProfileTab/: ProfileTab.tsx
src/component/SettingsTab/: SettingsTab.tsx
src/pages/: login.tsx  otp.tsx  overview.tsx  welcome.tsx
src/utils/: invokeFunc.ts
