[package]
name = "vrchat-rpc"
version = "0.0.0"
description = "VRChat rich presence tool for Discord's custom status"
authors = ["Atsukoro1"]
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
discord-rich-presence = "0.2.3"
once_cell = "1.19.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.21.7"
urlencoding = "2.1.3"
cookie = "0.18.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]
