[package]
name = "vrchat-rpc"
version = "0.0.0"
description = "VRChat rich presence tool for Discord's custom status"
authors = ["Atsukoro1"]
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.21.7"
urlencoding = "2.1.3"
cookie = "0.18.0"
url = "2.2.2"
futures-util = "0.3.30"
ezsockets = { version =  "0.6.2", features = ["native-tls", "client"] }
async-trait = "0.1.77"
lazy_static = "1.4.0"
discord-presence = "1.0.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]
